--- a/src/main/Timetable/Timetable.fxml
+++ b/src/main/Timetable/Timetable.fxml
@@ -16,7 +16,7 @@
    <children>
       <BorderPane prefHeight="800.0" prefWidth="1200.0">
          <top>
-            <Pane prefHeight="101.0" prefWidth="960.0" styleClass="topBar" BorderPane.alignment="CENTER">
+            <Pane prefHeight="108.0" prefWidth="960.0" styleClass="topBar" BorderPane.alignment="CENTER">
                <children>
                   <Button layoutX="977.0" layoutY="11.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
                      <graphic>
@@ -65,7 +65,7 @@
                         </Pane>
                         <Pane layoutX="31.0" layoutY="529.0" prefHeight="52.0" prefWidth="763.0" style="-fx-background-color: white;">
                            <children>
-                              <Button contentDisplay="RIGHT" layoutX="572.0" mnemonicParsing="false" onMouseClicked="#onNextButtonPressed" prefHeight="36.0" prefWidth="175.0" text="Gå vidare">
+                              <Button fx:id="nextButton" contentDisplay="RIGHT" disable="true" layoutX="572.0" mnemonicParsing="false" onMouseClicked="#onNextButtonPressed" prefHeight="36.0" prefWidth="175.0" text="Gå vidare">
                                  <font>
                                     <Font name="SansSerif Regular" size="22.0" />
                                  </font>
