fixed color on order and list tabs

--- a/src/main/ListTitlePane/ListTitlePane.css
+++ b/src/main/ListTitlePane/ListTitlePane.css
@@ -1,6 +1,6 @@
 .titled-pane:collapsed > .title
 {
-    -fx-background-color: #B1D5F6;
+    -fx-background-color: #5C88C4;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 7;
     -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
@@ -11,7 +11,7 @@
 
 .titled-pane > .title
 {
-    -fx-background-color: #037C99;
+    -fx-background-color: #496d9e;
     -fx-background-insets: 0, 1, 2;
     //-fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
     -fx-background-radius: 7;
@@ -23,7 +23,7 @@
 
 .titled-pane:hover > .title
 {
-    -fx-background-color: #2FAECD;
+    -fx-background-color: #83a0c9;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 7;
     -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
@@ -34,7 +34,7 @@
 
 .titled-pane:collapsed:hover > .title
 {
-    -fx-background-color: #cee2f5;
+    -fx-background-color: #7a9dcc;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 7;
     -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
