--- a/src/main/ListTitlePane/ListTitlePane.fxml
+++ b/src/main/ListTitlePane/ListTitlePane.fxml
@@ -19,7 +19,7 @@
    <graphic>
       <Pane prefHeight="58.0" prefWidth="523.0" stylesheets="@ListTitlePane.css">
          <children>
-            <Label fx:id="nameLabel" layoutY="16.0" prefHeight="26.0" prefWidth="144.0" styleClass="labeltext" text="Inköpslista 1" />
+            <Label fx:id="nameLabel" layoutY="16.0" prefHeight="26.0" prefWidth="144.0" styleClass="labeltext" text="Inköpslista 1" textFill="WHITE" />
             <Button layoutX="161.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#addOrderToCart" styleClass="buttons" text="Lägg till i kundvagn">
                <font>
                   <Font name="SansSerif Regular" size="17.0" />
