--- a/src/main/Product/Product.fxml
+++ b/src/main/Product/Product.fxml
@@ -42,7 +42,7 @@
                         <Image url="@../Res/Images/minus.png" />
                      </image>
                   </ImageView>
-                  <Button fx:id="buyButton" alignment="CENTER" contentDisplay="CENTER" layoutX="3.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onBuyButtonPressed" prefHeight="43.0" prefWidth="167.0" text="Köp" textAlignment="CENTER">
+                  <Button fx:id="buyButton" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" layoutX="3.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onBuyButtonPressed" prefHeight="43.0" prefWidth="167.0" text="Köp" textAlignment="CENTER">
                      <font>
                         <Font name="SansSerif Regular" size="24.0" />
                      </font>
